k8s/ml-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ml-model
spec:
  serviceName: "ml-model"
  replicas: 2
  selector:
    matchLabels:
      app: ml-model
  template:
    metadata:
      labels:
        app: ml-model
    spec:
      containers:
      - name: ml-model
        image: python:3.10-slim
        command: [ "sh", "-c", "sleep 15 && touch /tmp/model_loaded && tail -f /dev/null" ]
        readinessProbe:
          exec:
            command: ["sh", "-c", "test -f /tmp/model_loaded"]
          initialDelaySeconds: 5
          periodSeconds: 5
