k8s/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-model
spec:
  clusterIP: None
  selector:
    app: ml-model
  ports:
  - port: 80
    name: http
